gap problem solved

--- a/styles/logo.css
+++ b/styles/logo.css
@@ -153,7 +153,8 @@ section input[type="text"], section input[type="email"], section textarea{
 footer{
    
     text-align: center;
-    width: 100%;
+    max-width: 100%;
+
 
     
 }
@@ -161,7 +162,7 @@ footer ul{
     list-style: none;
     display: flex;
     justify-content: center;
-    justify-content: space-around;
+    gap: 20px;
     text-decoration: none;
     padding: 10px;
     
